--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,12 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+
+	<!-- Added Permissions -->
+	<key>NSCameraUsageDescription</key>
+	<string>Camera needed for video calls</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Microphone needed for video calls</string>
+
 </dict>
 </plist>
