--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   firebase_storage: ^12.3.2
   cloud_functions: ^5.1.3
   google_sign_in: ^6.2.1
+  
+  # Notifications
+  flutter_local_notifications: ^17.2.3
 
   # State Management
   provider: ^6.1.2
@@ -86,6 +89,7 @@ dependencies:
   device_info_plus: ^10.1.2
   package_info_plus: ^8.0.2
   equatable: ^2.0.5
+  share_plus: ^10.1.3
 
   # PDF Generation
   pdf: ^3.11.1
